feat: update project

--- a/english/word/simple-word/markdown/p3-p5.md
+++ b/english/word/simple-word/markdown/p3-p5.md
@@ -251,10 +251,10 @@
         
     | link v. | 场景 | Example |
     | ---- | ---- | ---- |
-    | be动词 | 单独使用 |  |
-    | get/became/turn/go/grow | 变得 | the leaf turn red |
-    | look/sound/smell/taste/feel | 感官动词，看、听、闻、尝、感觉起来... | the soup taste good |
-    | keep+adj./seem+adj. | 保持某种状态 | you should keep calm |
+    | be动词 | 单独使用，翻译成是 | |
+    | get, became, turn, go, grow | 变得、成为 | the leaf turn red |
+    | look, sound, smell, taste, feel | 感官动词，看、听、闻、尝、感觉**起来**... | the soup taste good |
+    | remain/keep+adj., seem+adj., prove | 保持某种状态 | you should keep calm |
 - old
 - another
     - pron.: Remance is one thing, marriage is quite another.
