feat: add vector

--- a/english/word/simple-word/markdown/p18-p20.md
+++ b/english/word/simple-word/markdown/p18-p20.md
@@ -5,18 +5,18 @@
     - sea vs ocean
         - sea 接近陆地
         - ocean 远离陆地
-    - the Pacific 太平洋
-    - the Atlantic 大西洋
-    - the Arctic 北冰洋
+    - the Pacific([pəˈsɪfɪk]) 太平洋
+    - the Atlantic([ətˈlæntɪk]) 大西洋
+    - the Arctic([ˈɑːrktɪk]) 北冰洋
     - the Indian 印度洋
-- poetry
-    - n. 诗歌，诗集 [ˈpoʊətri]
+- poetry [ˈpoʊətri]
+    - n. 诗歌，诗集
     - This writer's poetry reflects his love of nature.
-    - poet n. 诗人
+    - poet [ˈpoʊət] n. 诗人
     - poetic adj. 诗歌的，诗的
 - railroad/railway
     - n. 铁路
-    - rail n. 栏杆；轨道；铁路
+    - rail [reɪl] n. 栏杆；轨道；铁路
     - ruler 尺子
 - ready
     - adj. **准备好的**；乐意的；现成的
@@ -25,7 +25,7 @@
 - wear
     - vt. 穿；戴；面带；**磨损**
     - **磨损**
-        - The stones have been worn(wear-wore-worn) smoothly(顺利) by the constant(持续的) flow of water.
+        - The stones have been worn(wear-wore-worn) smoothly([smuðlɪ] 顺利) by the constant(持续的) flow of water.
     - wear-wore-worn
 - worry
     - v. 担心；n. 担心
@@ -58,10 +58,10 @@
     - n. 饮料；v. 喝，饮
 - elsewhere
     - adv. 到别处，在别处
-- escape
+- escape [ɪˈskeɪp]
     - vi. 逃跑； vt./n. 逃避，逃离
     - inescapably 不可避免的
-        - The law(法律) (the court shapes) is inescapably political([pəˈlɪtɪkl]). 法律（法院所塑造的法律）不可避免地具有政治性
+        - The law(法律) (the court([kɔːrt]) shapes) is inescapably political([pəˈlɪtɪkl]). 法律（法院所塑造的法律）不可避免地具有政治性
 - fat
     - adj. 胖的；丰厚的
     - fat pay 丰厚的收入
@@ -75,31 +75,32 @@
 - homeless
     - adj. 无家可归的
     - the homeless 无家可归的人
-- mile
+- mile [maɪl]
     - n. 英里
     - mil- 千
     - milestone n. 里程碑
+    - male adj. 男性的
 - native
     - adj. 出生地的；当地的；土著
     - nat- 出生
 - north
 - obviously
     - adv. 明显地
-    - **obvious**
-        - adj. 明显的 [ˈɑːbviəs]
+    - **obvious** [ˈɑːbviəs]
+        - adj. 明显的
         - vi == vis- 看
         - Surely it should be obvious to the dimmest(人：笨的；物：昏暗的) executive(管理人员)...
-- quarter
-    - **n. 四分之一；一刻钟；季度；** vt. 将... 四等分 [ˈkwɔːrtər]
+- quarter [ˈkwɔːrtər]
+    - **n. 四分之一；一刻钟；季度；** vt. 将... 四等分
     - qua- 4
     - 四分之一
         - a quarter of web content
     - 一刻钟
         - in the third quarter
     - 将...四等分
-        - She peeled(剥皮) and quartered an apple.
+        - She peeled( [piːl] 剥皮) and quartered an apple.
     - quarterly adj. 季度的，每季的
-- rapid
+- rapid [ˈræpɪd]
     - adj. 快的，快速的
     - rapid vs fast vs quick
         - fast: 运动状态的快 a fast car
@@ -113,7 +114,7 @@
     - v. 环绕...而行
         - We rounded the island at high speed. 我们高速绕行了这座岛
     - n. 回合
-        - It launched(启动) a round of talks about how to save newspapers.
+        - It launched([lɔːntʃ] 启动) a round of talks about how to save newspapers.
     - 取整数的
         - round number of 2000
     - 朝反方向的
@@ -123,13 +124,13 @@
 - smoke
     - n. 烟，烟尘； vi. 抽烟
     - ...the smell(n. 气味) of smoke，which might indicate(表明) the danger of fire.
-- solar
+- solar  [ˈsoʊlər]
     - adj. 太阳的，日光的
     - sol- 太阳；一个，单独
     - Wind and solar power <u>accounted for</u> more than 10 percent.
         - **accounted for** 占...比例（后边有数字）；解释
-- strange
-    - adj. 奇怪的，奇异的 [streɪndʒ]
+- strange [streɪndʒ]
+    - adj. 奇怪的，奇异的
 - thin
     - adj. 瘦的，薄的，稀薄的
     - the thin ice 薄冰
@@ -145,8 +146,8 @@
     - adj./adv. 最坏的，最差的
     - bad, worse, worst
     - <u>It was by far(到目前为止)</u> the worst speech he had ever made.
-- athlete
-    - n. 运动员；体育家 [ˈæθliːt]
+- athlete [ˈæθliːt]
+    - n. 运动员；体育家
 - black
     - adj. 黑色的； vt. 使变黑； n. 黑色，黑色人种（pl.）
     - whites and blacks
@@ -160,8 +161,8 @@
     - The top reason for the fake news phenomenon(现象) is "reade error". 假新闻现象的最主要原因是‘读者错误’
     - erroneous adj. 错误的 [ɪˈroʊniəs]
         - ...reveal(揭示) its erroneous nature(本质).
-- familiar
-    - adj. 熟悉的；随便的，放肆的 [fəˈmɪliər]
+- familiar [fəˈmɪliər]
+    - adj. 熟悉的；随便的，放肆的
     - unfamiliar 不熟悉的
     - New skills and unfamiliar business models are needed too. 还需要新的技能和不熟悉的商业模式
 - final
@@ -171,7 +172,7 @@
 - fine
     - adj. 极好的；好的；健康的； vt. 处以...罚金；n. 罚金
     - 罚金
-        - a $85000 fine and six months in prison(监狱).
+        - a $85000 fine and six months in prison([ˈprɪzn] 监狱).
 - front
     - n. 前面；领域
     - fashion front 时尚领域
@@ -180,7 +181,8 @@
     - v. 打，击；v. 到达
     - beat 打
     - 打击
-        - ...manufacturing(制造业) has taken a significant(adj. 重要的; 显著的) hit during recent decades...
+        - ...manufacturing([ˌmænjəˈfæktʃərɪŋ] 制造业) has taken a significant(adj. 重要的; 显著的) hit during recent
+          decades...
     - 到达
         - Many people hit middle age.
     - hit, hit, hit, hitting
@@ -212,24 +214,25 @@
     - take pride in 以...为豪
         - Stratford, says Friedman, <u>takes pride in</u> its independent(独立的) voice.
     - proud adj. 自豪的 be proud of
-        - Stratford <u>is</u> most <u>pound of</u> its nonconformist(不墨守成规的) image.
-- province
-    - n. 省；领域，范围 [ˈprɑːvɪns]
+        - Stratford <u>is</u> most <u>pound of</u> its nonconformist([ˌnɑnkənˈfɔrmɪst] 不墨守成规的) image.
+    - price
+- province [ˈprɑːvɪns]
+    - n. 省；领域，范围
     - pro- 向前
-- quote
+- quote [kwoʊt]
     - v. 引用，n. 引文，引语
     - 引用
         - The author quotes the example of our ancestors.
     - 出现在阅读题题干是例证题标志(cite)
-    - quota n. 定额
+    - quota [ˈkwoʊtə] n. 定额
 - rail
     - n. 栏杆，铁路
 - retailer
     - n. 零售商，零售店
-    - retail v./n. 零售 adj. 零售的
+    - retail [ˈriːteɪl] v./n. 零售 adj. 零售的
         - It originally retailed at $23.50.
-- secret
-    - adj. 秘密的，机密的 [ˈsiːkrət]
+- secret [ˈsiːkrət]
+    - adj. 秘密的，机密的 
     - secretary n. 秘书，大臣 [ˈsekrəteri]
 - sex
 - suddenly
@@ -250,7 +253,7 @@
     - n. 男演员；行动者
 - ahead
     - adv. 在前面；向前；提前，预先
-    - Planning ahead should eliminate(排除, 消除) wastage(浪费)...
+    - Planning ahead should eliminate([ɪˈlɪmɪneɪt] 排除, 消除) wastage([ˈwestɪdʒ] 浪费)...
 - apparently
     - adv. 显然地
     - He paused, apparently lost in thought. 他停顿了一下，显然陷入了沉思
@@ -267,9 +270,9 @@
         - Many everyday tasks <u>take</u> a surprising <u>toll on</u> the environment.
             - take toll on 对...造成损害
     - every day adv.
-        - We unconsciously(无意识的) imitate(模拟) the behavior we see every day.
-- fruit
-    - n. 水果；**成果** [fruːt]
+        - We unconsciously([ʌnˈkɑnʃəsli] 无意识的) imitate(模拟) the behavior we see every day.
+- fruit [fruːt]
+    - n. 水果；**成果** 
     - fruitless 没有成果的
 - gas
     - n. 气体；煤气；汽油
@@ -283,7 +286,7 @@
     - n. 主人，东道主；许多
     - 许多 a host of
         - Hugs(拥抱) can bring <u>a host of</u> health benefits to your body and mind.
-- humor/humour
+- humor/humour [ˈhjuːmə(r)]
     - n. 幽默，诙谐
     - sense of humor 幽默感
     - sense of happiness 愉悦感
@@ -310,7 +313,7 @@
 - software
     - n. 软件
     - hardware n. 硬件
-- spirit
+- spirit [ˈspɪrɪt]
     - n. 精神
     - spir- 呼吸
     - competitive spirit 竞争精神
@@ -343,8 +346,8 @@
     - adv. 再一次，有一次
 - artist
     - n. 艺术节；美术家
-- ceremony
-    - n. 仪式，典礼 == ritual([ˈrɪtʃuəl]) [ˈserəmoʊni]
+- ceremony [ˈserəmoʊni]
+    - n. 仪式，典礼 == ritual([ˈrɪtʃuəl])
     - graduation ceremony
 - chain
     - n. 链条；**连锁店**
@@ -370,7 +373,7 @@
 - famous
     - adj. 著名的，出名的
     - fame n. 名声；声誉
-        - Their pursuits(追求) are not fame or wealth.
+        - Their pursuits([pərˈsuːt] 追求) are not fame or wealth.
 - forever
     - adv. 永远地；始终
     - New technology has been eating jobs forever.
@@ -380,7 +383,7 @@
 - household
     - n. 家庭； adj. 家庭的，家用的
     - family n. 家庭
-- infant
+- infant [ˈɪnfənt]
     - n. 婴儿； adj. 婴儿的
     - fant- 说话
     - infancy n. 婴儿期；幼儿园
@@ -393,10 +396,10 @@
 - latter
     - adj. 后者的； n. 后者
     - late, latter
-- leisure
+- leisure [ˈliːʒər]
     - n. 空闲时间；悠闲
     - leisure time
-- meal
+- meal [miːl]
     - n. 膳食；一餐；一顿饭
 - motion
     - n. 运动；移动（不可数）
@@ -406,9 +409,9 @@
     - neither nor 既不...也不
     - either...or 要么..要么
 - night
-- ordinary
+- ordinary [ˈɔːrdneri]
     - adj. 普通的；平凡的
-    - The journalist(记者) must understand the law more profoundly(深刻地，深奥地) than an ordinary citizen(公民).
+    - The journalist([ˈdʒɜːrnəlɪst] 记者) must understand the law more profoundly(深刻地，深奥地) than an ordinary citizen(公民).
     - common 普通的
     - extraordinary adj. 非凡的，卓越的
 - partner
@@ -416,8 +419,8 @@
 - quota
     - n. 定额；限额
     - Norway adopted(采用) a nationwide corporate(公司的) gender quota. 挪威采取了全国性的公司性别配额
-- soccer
-    - n. 足球 [ˈsɑːkər]
+- soccer [ˈsɑːkər]
+    - n. 足球 
     - association football 足球
 - southern
     - adj. 南方的；南部的
