--- a/english/word/simple-word/markdown/p30-p32.md
+++ b/english/word/simple-word/markdown/p30-p32.md
@@ -93,8 +93,8 @@
     - adj. 极度的；可怕的；**糟糕的**
     - A clean copy <u>fresh off(刚刚完成/出炉)</u> a printer may look terrible.
     - terri- 恐怖
-        - terror n. 恐怖；可怕的人；恐怖的事
-        - terrorist n. 恐怖分子
+        - terror [ˈterər] n. 恐怖；可怕的人；恐怖的事
+        - terrorist [ˈterərɪst] n. 恐怖分子
             - -ist ...的人，专业的人
         - terrorism n. 恐怖主义 [ˈtɛrəˌrɪzəm]
             - -ism ...主义
@@ -116,7 +116,7 @@
 - bury [ˈberi]
     - vt. 掩藏，掩埋 
     - bur- == br- 燃烧
-    - Archaeologists(考古学家) also may locate(定位) buried remains by using technologies.
+    - Archaeologists([ˌɑːrkiˈɑːlədʒɪst] 考古学家) also may locate(定位) buried remains by using technologies.
 - cucumber [ˈkjuːkʌmbər]
     - n. 黄瓜 
 - suburb [ˈsʌbɜːrb]
@@ -134,17 +134,17 @@
     - ship n. 船
 - pollute
     - vt. 污染，弄脏
-    - Some of the contents of this gas pollute the atmosphere(大气层).
+    - Some of the contents of this gas pollute the atmosphere([ˈætməsfɪr] 大气层).
     - pollution n. 污染物
 - charitable [ˈtʃærətəbl]
     - adj. 慈善事业的；慈善团体的 
     - charity n. 慈善事业
         - care- 关心
-        - Buying gifts or giving to charity is often more pleasurable than purchasing(购买) things for oneself.
+        - Buying gifts or giving to charity is often more pleasurable([ˈplɛʒərəbəl]) than purchasing([ˈpɜːrtʃəs] 购买) things for oneself.
 - fossil [ˈfɑːsl]
     - n. **化石**；老顽固 
     - pos- == fos- 放置
-    - The fossil record shows that many species(物种) have endured(持续存在/忍受/经受住) for millions of years.
+    - The fossil record shows that many species(物种) have endured([ɪnˈdʊr] 持续存在/忍受/经受住) for millions of years.
 - float
     - flow + boat
     - v. 浮动，漂浮
@@ -155,10 +155,10 @@
 - movie
     - n. 电影
     - the movies 电影院
-- politically [pəˈlɪtɪkl]
+- politically [pəˈlɪtɪklɪ]
     - adv. 政治上
-    - policy n. 政策
-    - political adj. 政治的 
+    - policy [ˈpɑːləsi] n. 政策
+    - political [pəˈlɪtɪkl] adj. 政治的 
 - sick
     - adj. 患病的；想吐的；腻烦的；厌恶的(sick of)
     - 生病的
@@ -209,9 +209,10 @@
     - honestly adv. 诚实地；正当地
 - poll
     - n. 民意测验；选举投票
+    - pull v. 拉 
 - youth [juːθ]
     - n. 青春，青少年时代(不可数)；青年(可数) 
-    - lead more youths into criminal behavior
+    - lead more youths into criminal([ˈkrɪmɪnl]) behavior
     - young adj. 年轻的
 - ride
     - v. 骑车，骑马；n. 骑马旅行；搭便车；乘车旅行
@@ -245,7 +246,7 @@
     - theme + analysis
 - bother [ˈbɑːðər]
     - vt. 打扰；使不安 
-    - This has long bothered Policymakers in poor countries.
+    - This has long bothered policymakers in poor countries.
     - brother n. 兄弟
 - brown
     - adj. 棕色的，褐色的； n. 褐色
@@ -260,7 +261,7 @@
 - lane
     - n. 小路，车道
 - puritan [ˈpjʊrɪtən]
-    - n. 禁欲者；苦行憎；**清教徒** 
+    - n. **清教徒**；禁欲者；苦行憎
 - floor
     - n. 地板，地面
     - 地面 floor vs ground
@@ -276,21 +277,21 @@
     - basic adj. 基本的，基础的
 - poet [ˈpoʊət]
     - n. 诗人 
-    - poetry n. 诗歌
-    - poetic adj. 诗歌的
+    - poetry [ˈpoʊətri] n. 诗歌
+    - poetic [poʊˈetɪk] adj. 诗歌的
 - hunter [ˈhʌntər]
     - n. 猎人；狩猎者 
     - **headhunter** n. 猎头
     - hurt v./n. 受伤
     - hunt v. 打猎
 - tap
-    - n. 轻拍；龙头；窃听 vt. 轻拍；**开采，打开** 利用； 窃听vi. 轻拍
+    - vt. **开采，打开** 轻拍；利用； 窃听 n. 轻拍；龙头；窃听 vi. 轻拍
     - 开采，打开
         - tap resources 开采资源
         - tapped intuition and creativity 开发本能和创造力
 - breath
     - n. 气息，呼吸的空气；(不可数) 呼吸(可数)
-    - Deep breaths can help，as can speaking more slowly and deliberately(故意地).
+    - Deep breaths can help，as can speaking more slowly and deliberately([dɪˈlɪbərətli] 故意地).
     - breathe v. 呼吸，吸入
 - rent
     - vt. 租借，租用；出租 n. 租金
@@ -317,21 +318,21 @@
 - monthly
 - clue [kluː]
     - n. 线索，提示 
-    - These offer clues to the careers that will fit them best
+    - These offer clues to the careers([kəˈrɪr]) that will fit them best
 - questionable
     - adj. 可疑的；有问题的；未必准确的
     - question n. 问题； v. 提问
 - foresee [fɔːrˈsiː]
     - vt. 预见，预料，预知 
     - fore- 在...之前
-    - forecast n./v. 预测，预料
+    - forecast [ˈfɔːrkæst] n./v. 预测，预料
         - cast- 投掷，扔
     - predict v. 预测
-    - anticipate v. 预测，预料
+    - anticipate [ænˈtɪsɪpeɪt] v. 预测，预料
 - alike
     - adj./adv. 同样的，相像的
     - a == on
-        - My sister and I do not look like.
+        - My sister and I do not look alike.
     - like prep. 像
         - Much of our social life is like that.
 - engine
@@ -357,7 +358,7 @@
     - physical violence 身体暴力
     - school violence 校园暴力
 - keen
-    - adj. 热心的(keen on)；渴望的；敏锐的，激烈的
+    - adj. 热心的；渴望的；敏锐的，激烈的
     - ee 表示眼睛
         - deep
         - deem
