feat: add 011 write

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -137,5 +137,14 @@ leading hero, Zhuge Liang. I'm sure you will be quite interested in it. Looking 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
 
+## 011
+
+Dear Paul,<br>
+&emsp;&emsp;&emsp;&emsp;I'm extremely happy to learn you are coming to China! Here are my recommendations.<br>
+&emsp;&emsp;&emsp;&emsp;Since it's the first time you visit China. I highly recommend Beijing, the capital of China. Beijing is a city in the northern part of China. As a center of politics, culture, international communication, and scientific and technological innovation, Beijing attracts talent from all over the country, displaying China's development to the world.<br>
+&emsp;&emsp;&emsp;&emsp;As for tourist attractions, I suggest you visit the Imperial Palace, the Great Wall and the Summer Palace, all of which have been listed on the UN's World Heritage List. It is true that Beijing, once an ancient imperial city, is now a genuine metropolis. Looking forward to meeting you in Beijing.<br>
+
+<p align="right">Yours,</p>
+<p align="right">Li Ming</p>
 
 
