--- a/english/word/simple-word/markdown/p1-p2.md
+++ b/english/word/simple-word/markdown/p1-p2.md
@@ -2,9 +2,9 @@
 
 - the
     - 特指: 指代某个特定的，特别的，特殊的对象. Pass me the book. He is the tallest in our classroom.
-    - 用于比较级: the 比较级... the 比较级 “越...越...”: The harder you work, the greater progress you will make.
+    - 用于比较级: the 比较级...the 比较级 “越...越...”: The harder you work, the greater progress you will make.
     - 独指（天地西方普）: the earth, the sun, the Pacific Ocean, the West Lake, the guitar, the piano, on the left, on the
-      sourth, the Great Wall
+      south, the Great Wall
     - 类指(后加形容词)：the young, the old, the Greens
     - 固定搭配: by the end, in the end, all the time
 - of
@@ -45,7 +45,7 @@
     - aux. v.
         - 构成进行时态 be doing: I am teaching English.
         - 构成被动语态 be done: Keys are used for locking.
-        - 和不定式连用表示将来的安排 be to do: The main purpose of industry *is to create* wealth.
+        - 和不定式连用表示将来的安排 be to do: The main purpose([ˈpɜːrpəs] n. 意图，计划) of industry *is to create* wealth.
 - that
     - adj.: I like that girl.
     - pron.: I dislike that.
@@ -78,7 +78,7 @@
         - As he got older, his memory got worse.
 - with: 带有，因为
     - Mental health allows us to view others with sympathy.
-    - university men with literture ambitions
+    - university men with literature ambitions
     - I never fell overwhelmed with/for the amount of information my brain absorbs.
 - on
     - Mark your answers on ANSWER SHEET1.
@@ -103,12 +103,12 @@
 - from
     - prep. 远离，出自:
         - These range from around $500 to $5000.
-        - pretecting it from being defamed
+        - protecting it from being defamed
         - prevent suspects from deleting their phone contents
         - prohibit suspects from using their mobile phones
 - more
     - many, much 比较级: These gave banks more freedom.
-    - 与多音节单词构成比较级: more famous; more excting
+    - 与多音节单词构成比较级: more famous; more exacting
         - She is more beautiful than her mother.
 - or
     - Hurry up, or you will be late.
@@ -116,12 +116,12 @@
     - The crew of the ship gave them nothing but bread to eat.
     - None but he knew the truth.
 - at
-    - +地点(小)/时间(小): arrived in ChangChun, arrived in ChangChun state, at five o'clock
+    - +地点(小)/时间(小): arrived in ChangChun, arrived at ChangChun state, at five o'clock
 - one
 - your
 - will
     - Will you send this letter for me, please?
-    - In spite of what happened he never lost the will to live.
+    - In spite of(不管；尽管) what happened he never lost the will to live.
     - She willed her eyes to stay open.
 - willing adj. 愿意的、乐意的
     - Passengers will not be willing to pay more.
@@ -139,21 +139,22 @@
     - 问哪个 which/whichever
     - 问原因 why: Why did most Victorians look stem in photographs?
     - 问哪里 where/wherever: Whe are you from?
-    - 问什么 what/whatever: What is essential to Califormia's plan.
-    - 问时间 when/whenever: When's food? I'm starving!
+    - 问什么 what/whatever: What is essential to California's plan.
+    - 问时间 when/whenever: When's food? I'm starving([ˈstɑrvɪŋ])!
     - 问是谁 who/whom/whoever:
         - who would have thought to find you here?
         - whom/who do the police suspect?
     - 问谁的 whose: Whose car were they in?
-    - 问怎样 how: How to Innvate Our Work Practices?
+    - 问怎样 how: How to Innovate Our Work Practices?
     - 谁用 who，啥what，距离就要用how far，哪里where，为何why，何时用when很哇塞，哪个which加人、物，谁的whose长得酷，最后如何how帮助
     - +ever 翻译成 “无论...” why除外
 - good
     - adj. 大量的: a good number
     - It does nobody any good.
-    - n. 货物: prividing common goods
-- make -> made,made
+    - n. 货物: providing common goods
+- make
     - You make me happy
+    - made, made
 - about
     - prep.: We are much more rigid about immigrants.
     - adv.: about 2 million departed
@@ -174,11 +175,11 @@
 
 - there
     - pron. 与 be 连用，表示 “有”
-        - There is a girl in she shop.
+        - There is a girl in she shops.
         - There is some milk in the cup.
         - There is a cat and two dogs on the floor.
 - what
-    - adj. 引导感叹句翻译成“多么”, what + a/an + (adj.) + 单数可数名词 + 主语 + 谓语!
+    - adj. 引导感叹句翻译成“多么”: **what + a/an + (adj.) + 单数可数名词 + 主语 + 谓语**
         - What a waste of paper it is!
         - What a great player he is!
     - 引导名词性从句翻译成“...那样的事物（或人）”
@@ -189,7 +190,7 @@
 - text
 - say
     - vt. 说
-    - adv. 比方说: When he feels down - say, after giving a bad lecture.
+    - adv. 比方说: When he feels down - say, after giving a bad lecture([ˈlektʃər] n. 讲座; 教训).
 - other
     - adj. 不能+可数名词单数
         - other bananas
@@ -202,8 +203,8 @@
         - I want the others.
 - who
 - if
-    - conj. 引导条件状语从句, 如果；假如: If you have surplus vegetables you'll do a vegetale soup.
-    - conj. 引导名词性从句, 是否: Soon you'll feel confortable asking if they've any ham for soups.
+    - conj. 引导条件状语从句, 如果；假如: If you have surplus vegetables you'll do a vegetable soup.
+    - conj. 引导名词性从句, 是否: Soon you'll feel conformable asking if they've any ham for soups.
     - He's a good driver, if a litter over-confident.
 - new
     - news n. 新闻
@@ -213,7 +214,7 @@
         - in time 及时
         - at the some time 与此同时
         - all the time 总是
-        - by the time
+        - by the time 到…时候为止; 等到; 比及
     - n. 次数、倍数: three times
 - follow
     - It is advisable to follow the FSA advice.
@@ -230,9 +231,9 @@
     - Introduce the key points of your presentation.
     - Happiness is not a point of future.
     - You want to point to where it's useful for employees to go to.
-    - points out that ehere are enough people.
+    - points out that where are enough people.
 - most
-    - adj.: Most jobs are multidimensional
+    - adj.: Most jobs are multidimensional([ˌmʌltidɪˈmɛnʃənəl] adj. 多面的，多维的)
 - part
     - n. 部分
     - v. (使)分开: She hated being parted from the children.
@@ -251,13 +252,13 @@
 - read
     - Section II Reading Comprehension.
     - reader
-        - redership: 全体读者
+        - readership: 全体读者
 - they
 - only
     - 我们都坚持下来了，only 李明
 - no
     - no vs not: 名词前用 no，其他词前用 not
-        - not at all
+        - not at all 一点也不;没关系 / 不用谢;根本不（语气更强烈）
         - I have no time.
         - She is not happy.
         - I did not like him.
