--- a/english/word/simple-word/markdown/p21-p23.md
+++ b/english/word/simple-word/markdown/p21-p23.md
@@ -5,7 +5,7 @@
     - touch on 触碰；涉及
         - McAfee indeed(确实) <u>touched on</u> this point in their book. McAfee 确实在他们的书中提到了这一点。
     - in touch with 与...相接触/联系
-        - Healthy optimism(乐观) means being <u>in touch with</u> readily. ???
+        - Healthy optimism([ˈɑːptɪmɪzəm] 乐观) means being <u>in touch with</u> readily. ???
 - transportation
     - n. 交通工具，运输
     - transport v./n. 交通；运输
@@ -15,15 +15,15 @@
     - 交通工具
         - Shippers(货主) have the option of switching to trucks or other forms of transportation.
     - 运输
-        - New research on transportation biofuels(生物燃料) is already under way.
+        - New research on transportation biofuels(['baɪoʊfjuəl] 生物燃料) is already under way.
 - trap
     - n. **陷阱**；圈套；困境； vt. 设陷阱捕捉；使中圈套
     - tra- 拖着
     - 陷阱
         - Thus, poor countries might not be able to escape their poverty(贫困) traps.
     - 设陷阱捕捉
-        - The researchers trapped the robots in cages.
-- traveler
+        - The researchers trapped the robots in cages(笼子).
+- traveler ['træv(ə)lər]
     - n. 旅行者，游客
 - version
     - n. **版本；译本**；说法
@@ -44,6 +44,7 @@
     - n./vt. 帮助（官方） 
     - Bolivar had received aid from Haiti(海地)...
     - aide n. 助手 [eɪd]
+    - aim [eɪm] n. 目标
 - attack [əˈtæk]
     - v./n. 袭击；抨击； n. (疾病)突然发作 
     - 袭击；抨击
@@ -70,7 +71,7 @@
     - circu- 圈，环
     - A break in the circuit caused the lights to go out.
     - circuit judge 巡回法官
-    - Federal Circuit 联邦巡回法院
+    - Federal([ˈfedərəl]) Circuit 联邦巡回法院
 - client
     - n. 客户；委托人
 - clothes
@@ -98,13 +99,13 @@
     - incorrectly adv. 不正确地；错误地
 - cycle
     - n. 循环；周期；
-    - These brands have hijacked(劫持) fashion cycle. 这些品牌已经操控了时尚周期
+    - These brands have hijacked([ˈhaɪdʒæk] 劫持) fashion cycle. 这些品牌已经操控了时尚周期
     - bicycle n. 自行车
 - differently
     - adv. 不同地；相异地
 - drama
     - n. 戏剧；剧本；戏剧性事件
-    - ...the drama was a form(形式) of literature(文学) which gave glory(荣耀) to Greece(希腊) and Roma(罗马)...
+    - ...the drama was a form(形式) of literature([ˈlɪtrətʃər] 文学) which gave glory([ˈɡlɔːri] 荣耀) to Greece(希腊) and Roma(罗马)...
       这种戏剧是一种文学形式，它使希腊和罗马获得荣耀
     - dramatic adj. 戏剧性的；巨大的
         - The same dramatic technological changes ...have also increased the risk...
@@ -138,6 +139,7 @@
     - narrow victory 勉强胜利
     - v. 缩小
         - The gap must be narrowed.
+    - arrow [ˈæroʊ] n. 箭（头）
 - nineteen
 - page
     - n. 页； vt. 给...标页码；vi. 翻书页
@@ -163,7 +165,6 @@
 - tip
     - n. 末端；小费；**小建议**；vt. 使倾斜，倒入；给...小费
     - root tips 根末端
-    - to insure promptness 保证服务迅速 -> 小费
     - 小建议
         - give them some tips for the tour(旅游)
 - unusual
@@ -184,7 +185,7 @@
     - additional adj. 额外的；附加的
 - weak [wiːk]
     - adj. **虚弱的；能力弱的**； 灯光的微弱；稀薄的 
-    - who are physically weak or crippled(跛的)
+    - who are physically weak or crippled([ˈkrɪpl] 跛的)
     - the weak lecture 糟糕的演讲
     - weaken v. 使虚弱；减弱
         - ...weaken big tech companies
@@ -198,9 +199,9 @@
         - pairing them with better-behaved classmates
 - storage
     - n. 储存，保管
-- delight
+- delight [dɪˈlaɪt]
     - n. 高兴；快乐； vt. 使高兴
-    - gratification n. 高兴；满足
+    - gratification [ˌɡrætəfɪˈkeʃən] n. 高兴；满足
     - delight and gratification
 - officer
     - n. 军官；官员
@@ -218,7 +219,7 @@
 - cry
     - vi. 哭；vt. 叫喊，大喊大叫
     - cry out for 急需
-        - The endless(无尽) legal(法律) battles <u>cry out for</u> Congress(国会) to act.
+        - The endless(无尽) legal([ˈliːɡl] 法律) battles <u>cry out for</u> Congress(国会) to act.
     - rallying cry 集结号角
 - red
 - club
@@ -268,11 +269,12 @@
 - vitamin
     - n. 维生素
     - vit- 生命
-    - **vital** adj. 生死攸关的，至关重要的
+    - **vital** [ˈvaɪtl] adj. 生死攸关的，至关重要的
 - spouse [spaʊs]
     - n. 配偶 
     - In Cambodia(柬埔寨), the choice of a spouse is a complex one for the young male.
 - trip
+  - n. 旅游，旅行
 - request
 - unable
     - adj. 未能，无法
@@ -309,7 +311,7 @@
     - gram- 刻；写
         - program n. 程序
         - diagram n. 图表
-- cool
+- cool [kuːl]
     - adj. 凉爽的，冷淡的
 - dinner
     - n. 正餐，主餐
@@ -326,7 +328,7 @@
     - lect- == less- 说
     - He reminds himself that not every lecture can be a Nobel(诺贝尔) winner.
 - slowly
-    - adv. 慢速的
+    - adv. 慢速地
 - film
     - n. 电影；胶卷（正式）
     - movie n. 电影
@@ -370,7 +372,7 @@
         - motion n. 移动
 - guard [ɡɑːrd]
     - n. 卫兵； vt. 守卫；看守 
-    - guardian n. 保护者；守卫者
+    - guardian [ˈɡɑːrdiən] n. 保护者；守卫者
     - -ian 专业的人
         - historian 历史学家
 - genius
@@ -388,9 +390,9 @@
 - quantity
     - n. 量，数量
     - quality n. 质量；品质
-        - **a quantity of sth./quantities of sth.** 一些，一系列（sth. 可不可数都可以）
-            - a large quantity of clothes 大量衣服
-            - large quantities of CO2 大量的二氧化碳
+    - **a quantity of sth./quantities of sth.** 一些，一系列（sth. 可不可数都可以）
+        - a large quantity of clothes 大量衣服
+        - large quantities of CO2 大量的二氧化碳
     - quantitative adj. 量的；定量的
         - We need to do some quantitative analysis of the drugs.
 - ten
