--- a/english/word/simple-word/markdown/p33-p35.md
+++ b/english/word/simple-word/markdown/p33-p35.md
@@ -37,7 +37,9 @@
     - 片段
         - Participants(参与者) watched shorter video clips.
     - 剪
-        - You have to clip a paragraph to place it elsewhere.
+        - You have to clip a paragraph([ˈpærəɡræf]) to place it elsewhere.
+    - slip
+    - chip n. **芯片**
 - jet [dʒet]
     - n. 喷气式飞机；喷嘴；喷射 
     - ject- 扔，投掷
@@ -164,6 +166,7 @@
     - 触到 brush against
         - He felt her hair <u>brushed against</u> his shoulder.
     - broom 笤帚
+    - rush n. 冲 
 - August [ˈɔːɡəst]
 - excel
     - vi. 擅长，突出(excel in)
@@ -178,7 +181,7 @@
     - prefer v. 更喜欢，较喜欢
         - prefer A to B 相比B更喜欢A
         - They prefer part-time jobs to full-time jobs.
-- hail
+- hail [heɪl]
     - vt. **招呼；称赞**；n. 雹；一阵；vi. 下雹
     - We hail them as Americans in the making...
 - chip
@@ -195,7 +198,7 @@
 - pocket
     - n. **口袋**，小包；adj. 袖珍的，小型的
     - 口袋
-        - They go through the wallet or pocket of an <u>arrestee(被捕者)</u>.
+        - They go through the wallet or pocket of an <u>arrestee([əres'ti] 被捕者)</u>.
 - personally
     - adv. 就本人而言；就个人意见
     - personally speaking 就个人而言
@@ -223,6 +226,7 @@
     - pop into my mind 突然进入我的脑海中
 - grin
     - v./n. 咧嘴笑
+    - gain vt. 获得
 - relax
     - v. 放松；缓和
     - relaxation n. 放松，消遣 [ˌriːlækˈseɪʃn]
@@ -259,7 +263,7 @@
     - Though not biologically([ ˌbaɪəˈlɑːdʒɪkli] 生物学上) related，friends are as "related" as fourth cousin.
 - border
     - n. **界线；边境**； v. 给...加上边；接近
-    - Its internal borders are open to goods, capital(资本) and labour.
+    - Its internal borders are open to goods, capital(资本) and labour([ˈleɪbər] 劳动).
 - festival [ˈfestɪvl]
     - n. 节日 
     - Spring Festival 春节
@@ -329,7 +333,7 @@
 - underground
     - adv. **在地下；秘密的**； n. 地铁(英式)
     - subway
-    - metro
+    - metro [ˈmetroʊ]
 - sadness
     - n. 悲伤
 - gentleman
