--- a/english/word/simple-word/markdown/p24-p26.md
+++ b/english/word/simple-word/markdown/p24-p26.md
@@ -7,12 +7,12 @@
     - 战胜
         - It's easy to beat plastic(塑料).
     - n. 跳动
-        - Listening through earphones to the same monotonous beats.
+        - Listening through earphones to the same monotonous([məˈnɑːtənəs]) beats. 戴着耳机听着同样单调的节拍
     - meat n. 肉
-- peculiar
-    - adj. 特有的，独特的；奇怪的，古怪的 [pɪˈkjuːliər]
+- peculiar [pɪˈkjuːliər]
+    - adj. 特有的，独特的；奇怪的，古怪的
     - peculiar to sth 某物所特有的
-        - the geographic conditions <u>peculiar to America</u>.
+        - the geographic([ˌdʒiə'ɡræfɪk] adj. 地理学的) conditions <u>peculiar to America</u>.
 - sudden
 - pen
 - strongly
@@ -35,11 +35,11 @@
     - n. 包裹；一群(a pack of)； v. 打包；塞满
     - 塞满
         - More people are trying to overpack their carry-on bags.
+    - a pack of deal 一揽子交易
+    - a pack of plan 一揽子计划
+    - 包装
+        - Tea of different brands are packed with well-designed paper.
     - package n. 包裹；包装；一揽子交易（或计划）； vt. 打包；包装
-        - a pack of deal 一揽子交易
-        - a pack of plan 一揽子计划
-        - 包装
-            - Tea of different brands are packed with well-designed paper.
         - 包装 pack vs package
             - package 外包装
             - pack 包装这个动作
@@ -76,8 +76,8 @@
     - tighten v. 变紧，更加牢固 [ˈtaɪtn]
         - tighten the belt(腰带) == belt-tightening 节衣缩食
     - tightly adv. 紧紧地，牢固地
-- silver
-    - n. 银器；银；银币  [ˈsɪlvər]
+- silver [ˈsɪlvər]
+    - n. 银器；银；银币
     - **sliver lining** 一线希望
 - rear
     - n. 背部，后面 adj. 后部的背后的； vt. 抚养；饲养
@@ -87,8 +87,8 @@
         - Celebrity(名人) moms have influenced(受影响) our attitude towards child rearing. 名人妈妈们影响了我们对育儿的看法
 - wood
     - n. 木材，木料；（pl. woods）树林
-- folk
-    - n. 民族，人民；adj. 民间的 [foʊk]
+- folk [foʊk]
+    - n. 民族，人民；adj. 民间的 
     - fork n. 叉子
 - friendship
     - n. 友谊，友好
@@ -106,11 +106,11 @@
     - n. 树枝；分支；分流
     - br- == bur- 燃烧
     - There are two separate(分离的) and hostile(敌对的) branches.
-- sugar
+- sugar [foʊk]
     - n. 糖；（食用糖）；vt. 在...中加糖
     - candy n. 糖果
-- fellow
-    - n. 同伙，同事；会员； adj. 同伴的，同事的 [ˈfeloʊ]
+- fellow [ˈfeloʊ]
+    - n. 同伙，同事；会员； adj. 同伴的，同事的 
     - Rats can send out warning message to their fellow.
 - miss
     - n. 小姐； vt. **想念；错过；漏掉**
@@ -118,8 +118,8 @@
 - station
     - n. 车站
     - sta- 站
-- causal
-    - adj. 不经意的，非正式的；偶然的 [ˈkɔzəl]
+- causal [ˈkɔzəl]
+    - adj. 不经意的，非正式的；偶然的
     - cas- == aid- 落下
     - ...away from casual interactions(n. 相互作用) with strangers(n. 陌生人)...
 - copy
@@ -128,8 +128,8 @@
     - n. 皮肤；毛皮
 - townsfolk
     - n. 镇民，市民
-- journey
-    - n. 旅行，行程 [ˈdʒɜːrni]
+- journey [ˈdʒɜːrni]
+    - n. 旅行，行程 
     - travel vs journey
         - travel 长途旅行
         - journey 与记录有关
@@ -156,15 +156,15 @@
     - Newton's apple 万有引力
 - holiday
     - n. 假期；假日
-- heaven
-    - n. 天堂；(pl.)天空；乐事 [ˈhevn]
+- heaven [ˈhevn]
+    - n. 天堂；(pl.)天空；乐事 
     - Europe is not a gender-equality heaven.
     - heavy adj. 重的 [ˈhevi]
 - belt
     - n. 腰带；皮带；地带；地区 [belt]
     - They do some modest belt-tightening.
     - safety belt 安全带
-    - conveyor belt 传送带
+    - conveyor([kənˈveɚ]) belt 传送带
     - 地带
         - Hill's pressure later led to the creation of National parks and green belts(绿化带). Hill 的施压后来促成了国家公园和绿化带的建立
 - careful
@@ -175,7 +175,7 @@
 - window
     - n. 窗户，窗口
 - tone
-    - "频率" => n. **语气；音调**，声调；色调；**（肌肉）张力**； v. 增强（tone up）
+    - "频率" => n. **（肌肉）张力**；**语气；音调**，声调；色调； v. 增强（tone up）
     - 语气，语调
         - softened(软化) his tone and adopted(采用) some new policy.
     - 张力
@@ -184,8 +184,8 @@
     - adj. 骄傲的，傲慢的
     - be proud of 对...感到骄傲
     - proudly adv. 得意地；自豪地
-- pure
-    - n. 纯的，纯洁的；纯净的；抽象的；完全的，十足的 [pjʊr]
+- pure [pjʊr]
+    - n. 纯的，纯洁的；纯净的；抽象的；完全的，十足的 
     - 完全的
         - The idea is pure lobby(游说) talk.
     - purely adv. 完全地，纯粹地
@@ -194,8 +194,8 @@
 - comfort
     - n. 舒适；安慰 vt. 使舒适；安慰
     - comfortable adj. 舒适的
-- teenager
-    - n. 青少年 [ˈtiːneɪdʒər]
+- teenager [ˈtiːneɪdʒər]
+    - n. 青少年 
     - teenage adj. 青少年的，十几岁的
 - during
     - prep. 在...期间
@@ -206,12 +206,12 @@
     - dur- 时间
         - durable
         - endure
-- June
+- June [dʒuːn]
 - stream
     - n. 小溪，溪流
     - The tourist(游客) streams are not entirely separate(分离).
-- previous
-    - adj. 先前的，以往的 [ˈpriːviəs]
+- previous [ˈpriːviəs]
+    - adj. 先前的，以往的 
     - According to Paragraph 1，most previous surveys(调查) found that home
     - previously adv. 事先；以前
 - actively
@@ -240,8 +240,8 @@
         - wage 短期
         - salary 长期
 - defend
-    - vt. 防卫，**保护；保卫**；为...辩护
-    - Without the ability to defend their ideas，they cannot fully participate(参加) in our democracy(民主).
+    - vt. **保护；保卫**，防卫；为...辩护
+    - Without the ability to defend their ideas，they cannot fully participate(参加) in our democracy([dɪˈmɑːkrəsi] 民主).
       如果没有捍卫自己观点的能力，他们就不能在我们的民主制度中充分参与
     - defender n. 守卫；后卫
     - defendant n. 被告
@@ -286,15 +286,15 @@
     - adv. 各处，任何地方
 - hotel
     - n. 旅馆
-- formerly
-    - adv. 以前；从前 [ˈfɔːrmərli]
+- formerly [ˈfɔːrmərli]
+    - adv. 以前；从前
     - Formerly it lasted three days...
     - former adj. 以前的，从前的
         - fore- 在...之前
             - before prep.
-- tiny
-    - adj. 极小的，微小的 [ˈtaɪni]
-- borrow
+- tiny [ˈtaɪni]
+    - adj. 极小的，微小的 
+- borrow [ˈbɔːroʊ]
     - vt. 借，借入
     - lend 借出
 - volume
@@ -310,8 +310,8 @@
         - Beethoven's habit of increasing the volume.
 - unpleasant
     - adj. 令人不快的，不舒服的
-- acre
-    - n. 英亩 [ˈeɪkər]
+- acre [ˈeɪkər]
+    - n. 英亩 
     - California's plans treat(处理) 35000 acres of forecast a year by 2020...
 - morning
 - ticket
@@ -319,13 +319,13 @@
 - climb
     - vi./n. 攀爬，上升，增长； vt. 攀爬
     - 上升
-        - This year，that figure climbed to 61%.
+        - This year，that figure([ˈfɪɡjər] n. 数字) climbed to 61%.
 - dress
     - n. 连衣裙；vi. 穿衣； vt. 给...穿衣；装饰
     - overdress v. 穿的太讲究；n. 外衣
 - passenger
     - n. 乘客
-- grain
+- grain [ɡreɪn]
     - n. 谷物；颗粒；少量
     - fine-grained information 颗粒度很细的信息
 - spell
@@ -338,9 +338,9 @@
         - I'm afraid this spell trouble！
     - 一段时间
         - bringing prominence(名声) for a spell
-- wheel
-    - n. **轮，车轮**；vt. 推，拉；vi. 转动，旋转 [wiːl]
-    - ferries wheel 摩天轮
+- wheel [wiːl]
+    - n. **轮，车轮**；vt. 推，拉；vi. 转动，旋转 
+    - ferries([ˈferi]) wheel 摩天轮
     - wheelchair 轮椅
     - 轮子
         - Rates can be scared(害怕的) by a plastic box on wheels.
@@ -352,7 +352,7 @@
 - excuse
     - vt. 原谅；为...辩解； n. 借口，辩解
     - n. 借口
-        - ...cloaking(遮掩) his exit in the usual vague(模糊的) excuses
+        - ...cloaking([kloʊk] 遮掩) his exit in the usual vague([veɪɡ] 模糊的) excuses
     - 为...辩解
         - People in large cities <u>tend to(往往)</u> excuse criminals(罪犯).
 - location
@@ -368,8 +368,8 @@
     - adj. 悲伤的
     - sadness n. 悲伤；悲痛
     - sadly adv. 令人遗憾；不幸地
-- wing
-    - n. 翼（建筑物），翅膀 [wɪŋ]
+- wing [wɪŋ]
+    - n. 翼（建筑物），翅膀 
     - The building slowly rose wing by wing. 这栋建筑逐渐建成，一翼一翼地加上去
 - fee
     - n. 费用
@@ -390,8 +390,8 @@
     - public adj. 平民的，大众的；n. 平民，大众，公众
         - public transportation 公共交通
         - Men <u>tend to(往往)</u> talk more in public than women.
-- colony
-    - n. 殖民地，聚民区 [ˈkɑːləni]
+- colony [ˈkɑːləni]
+    - n. 殖民地，聚民区
     - col- == cul- 培养
         - culture n. 文化
     - Spanish(西班牙人) colonies had been established in Mexico.
@@ -401,7 +401,7 @@
         - If a business was shipping a customer's purchase to a state...
 - vice
     - n. 缺点，弱点；邪恶；道德败坏 [vaɪs]
-    - Idleness(懒惰) is not just a vacation, an indulgence(沉溺) or a vice.
+    - Idleness(懒惰) is not just a vacation, an indulgence([ɪnˈdʌldʒəns] 沉溺) or a vice.
 - visa
     - n. 签证
     - vis- 看
@@ -409,9 +409,9 @@
 - exam
     - n. 考试，测验
     - examination n. 考试，测验
-- army
+- army [ˈɑːrmi]
     - n. 军队，大批
-    - But creating a future army of coders(编码) is not the sole(唯一) purpose(目的) of the classes.
+    - But creating a future army of coders(编码) is not the sole(唯一) purpose([ˈpɜːrpəs] 目的) of the classes.
     - arm v. 武装
 - color/colour
     - n. 颜色
@@ -422,13 +422,13 @@
 - cloud
     - n. 云，一团； vt. 使模糊；破坏，使...蒙上阴影
     - 使...蒙上阴影
-        - ...letting vague(模糊的) pronouncements(宣言) cloud their reputations(声誉).
+        - ...letting vague([wɪŋ] 模糊的) pronouncements([prəˈnaʊnsmənt] 宣言) cloud their reputations(声誉).
 - forth
     - adv. 向前，向外
     - fore- 向前，向外
         - **forward** == forth
-    - Students are expected to bring forth innovative(创新的) computer technologies.
+    - Students are expected to bring forth innovative([ˈɪnəveɪtɪv] 创新的) computer technologies.
 - fresh
     - adj. 新鲜的；新颖的
-    - Eat plenty(很多) of fresh fruit and vegetables.
+    - Eat plenty([ˈplenti] 很多) of fresh fruit([fruːt]) and vegetables.
 - eight
