--- a/english/word/simple-word/markdown/p3-p5.md
+++ b/english/word/simple-word/markdown/p3-p5.md
@@ -11,13 +11,14 @@
 - child
     - children n.复数
     - childhood n. 童年，幼年
-    - childless adj. 无子女的，无后代的: Parents are less happy than childless couples.
+    - childless adj. 无子女的，无后代的
+        - Parents are less happy than childless couples.
     - childbirth n. 分娩，生孩子
     - childcare n. 儿童保育，儿童照管
 - long
     - 渴望: long for return
-- paragraph
-    - paraphrase
+- paragraph [ˈpærəɡræf]
+    - paraphrase [ˈpærəfreɪz]
 - give
 - even
     - adj.: Talking in an even tone helps the other person cool down.
@@ -28,14 +29,14 @@
     - pron. 指代可数名词复数
 - world
     - 领域: the smartphone world
-- our 
+- our
 - think
     - thought, thought
 - get
-    - But most law gradutes never get a big-firm job.
-    - link v. 变得，到达: Sometimes parents get exhausted.
+    - But most law graduates never get a big-firm job.
+    - link v. 变得，到达: Sometimes parents get exhausted([ɪɡˈzɔːst]).
 - much
-    - adv.: to become much more self-sufficient
+    - adv.: to become much more self-sufficient([səˈfɪʃnt] adj. 足够的; 充足的)
 - sheet
 - each
     - pron.: each has an apple
@@ -48,7 +49,7 @@
     - went, gone
 - his
 - because
-    - conj.: I did it because he told me to.
+    - conj.: I did it because he told me too.
     - cause
         - n.
         - vt.: Do they know what caused the fire?
@@ -90,7 +91,7 @@
     - n. 一段
     - pass
         - vt. 通过: She gave me a nod as she passed the street.
-        - vt. 经过: Califormia recently passed a law.
+        - vt. 经过: California recently passed a law.
     - bypass n. 旁路. v. 绕过，避开
     - passenger n. 乘客
     - password n. 密码
@@ -112,15 +113,14 @@
     - **adv. 那么，因而**: If you miss that train then you'll have to get a taxi.
     - **adv. 然后，于是**: He drank a glass of whisky, then another and then another.
 - between
-- ~~mart~~
 - problem
 - see
     - see...as 把...视为: I see you as my best friend.
-- look 
-    - 容貌: popularity of certain looks, brands, or nerghborthoods.
+- look
+    - 容貌: popularity of certain looks, brands, or neighborhoods.
 - any
     - det. 任何的: any people, any apples, any a book
-    - adv.: She didn't do any leanrning thing today.
+    - adv.: She didn't do any learning thing today.
 - seem
     - link v. 似乎，好像 +adj.: it seems silly to stay back a year.
     - vi. +to do: The similar genes seem to be evolving faster than other genes.
@@ -130,27 +130,27 @@
     - too...to 太...不能: A job's starting salary seems too small to satisfy an emerging adult.
 - last
     - 与过去时连用，adj. 最近的 adv. 上一次: Its lawmakers gave preliminary approval last week to a law.
-    - What does the author argue in the last paragrph?
+    - What does the author argue in the last paragraph?
     - v.: Formerly it lasted three days...
 - before
     - conj. 在...以前（+内容）: Before you share your thoughts...
     - adv. 以前(什么也不加）: This advice is more relevant now than ever before.
 - still
-    - adv. 仍旧: because writing was, and still is, one of my favourite activites.
-    - adj. 静止的: Redesky cites the "still face experiment".
+    - adv. 仍旧: because writing was, and still is, one of my favourite activities.
+    - adj. 静止的: Reddest cites the "still face experiment".
 - country
     - n. 农村: For the first time in the history more people live in towns than in the country.
-    - n. 国家: After the Netheriands, Britain is Europe's most crowded country.
+    - n. 国家: After the Netherlands, Britain is Europe's most crowded country.
 - day
     - 用复数，表示时期: Since the days of Aristotle.
 - often
 - like
     - prep. 像: Much of our social life is like that.
-    - likely 
+    - likely
         - adj. 可能的
         - adv. 可能
         - be likely to 有可能: You're more likely to be heard...
-    - likelihood  n. 可能，可能性
+    - likelihood n. 可能，可能性
 - thing
 - us
 - after
@@ -166,15 +166,15 @@
     - adj.: This is the very book.
 - could
 - few
-    - 几乎没有(单独使用): Few of us use our innovative modes of thought.
+    - 几乎没有(单独使用): Few of us use our innovative(innovative) modes of thought.
     - 很少(与a连用): A few wealthy people will own all the capital.
     - little
         - a little
     - few + 可数名词, little + 不可数名词
 - might
-- example 
+- example
     - n. 例子: Jealousy**, for example,** may have evolved to alert us to important inequalities.
-    - n.: Set a Good Example for Your Kids. 
+    - n.: Set a Good Example for Your Kids.
 - those
 - today
     - adv./n. 现今
@@ -182,13 +182,14 @@
 - while
     - conj. 尽管(位于句首): While their parents were content to work long hours young people value flexibility.
     - conj. 当...的时候(+doing): saving them money while helping eh environment.
-    - conj. 然而(位于句中): They can smell one type of flower but not another, while others are sensitive to the smeils of both flowers.
+    - conj. 然而(位于句中): They can smell one type of flower but not another, while others are sensitive to the smells
+      of both flowers.
 - age
     - 时代: digital age, age of AI
 - want
     - vt.: You might want to gather your army first.
 - idea
-    - ideal adj. 理想: Mauna Kea is deemed as an ideal astronomical side.
+    - ideal adj. 理想: Mauna Kea is deemed as an ideal astronomical([ˌæstrəˈnɑːmɪkl] adj. 天文学的; 极其巨大的) side.
     - idealized adj. 理想的: They portray an idealized version of themselves.
 - family
     - Father And Mother I Love You.
@@ -197,8 +198,9 @@
 - kind
     - kindness n. 仁慈，友好的行为
 - yet
-    - adv. 仍然: Virtual reality haven't veen invented yet.
-    - conj. 然而: Adult women do not remember being so obsessed with the colour, yet it is pervasive in our young girls' lives.
+    - adv. 仍然: Virtual reality haven't been invented yet.
+    - conj. 然而: Adult women do not remember being so obsessed with the colour, yet it is pervasive in our young girls'
+      lives.
 - far
     - further, furthest
 - large
@@ -207,12 +209,12 @@
     - vt. 主语物 (spend: 主语人)
         - It would cost the company money.
         - I spend some money.
-    - n. 成本: the high cose of operation.
+    - n. 成本: the high cost of operation.
     - at the cost of 以...为代价: The battle was won at the cost of many lives.
     - costly adj. 昂贵的，代价高的: It can be costly to make up credits.
 - however
     - adv. 无论如何 +adj./adv.: Each set of circumstances, however bad, offers a unique opportunity for growth.
-    - adv. 然而(修饰整个句子): 
+    - adv. 然而(修饰整个句子):
         - However, the numbers are still small.
         - The numbers, however, are still small.
         - The numbers are still small, however.
@@ -226,11 +228,11 @@
     - interest groups 利益集团
     - interest rate 利率
 - both
-    - neither 
+    - neither
 - century
 - English
 - home n. 家，家乡
-- line 
+- line
     - n. 界限: whether there is still a line between the court and politics.
 - rather
     - adv. 相当: Their work makes a rather startling assertion.
@@ -246,18 +248,18 @@
     - link v. 变得
     - grew, grown
     - growth n. 成长，增长
-    - grower n. 栽培者
+    - grower [ˈgroʊə(r)] n. 栽培者
     - grown-up adj. 成年的 n. 成年人
-        
-    | link v. | 场景 | Example |
-    | ---- | ---- | ---- |
-    | be动词 | 单独使用，翻译成是 | |
-    | get, became, turn, go, grow | 变得、成为 | the leaf turn red |
-    | look, sound, smell, taste, feel | 感官动词，看、听、闻、尝、感觉**起来**... | the soup taste good |
-    | remain/keep+adj., seem+adj., prove | 保持某种状态 | you should keep calm |
+
+      | link v. | 场景 | Example |
+      | ---- | ---- | ---- |
+      | be动词 | 单独使用，翻译成"是" | |
+      | get, became, turn, go, grow | 变得、成为 | the leaf turn red |
+      | look, sound, smell, taste, feel | 感官动词，看、听、闻、尝、感觉**起来**... | the soup taste good |
+      | remain/keep+adj., seem+adj., prove | 保持某种状态 | you should keep calm |
 - old
 - another
-    - pron.: Remance is one thing, marriage is quite another.
+    - pron.: Romance is one thing, marriage is quite another.
     - adj.: Such active research can have another effect.
 - against
     - Fly against the wind again and again.
@@ -280,8 +282,10 @@
 - feel
     - felt, felt
 - **instead**
-    - adv. 反而(表递进): The french tax is not just a unilateral. Instead, the digital services tax is part of a much larger trend.
-    - adv. 代替: Buy all your clothes at once with a stylist instead of <u>shopping</u> alone, one article of clothing at a time.
+    - adv. 反而(表递进): The french tax is not just a unilateral. Instead, the digital services tax is part of a much
+      larger trend.
+    - adv. 代替: Buy all your clothes at once with a stylist instead of <u>shopping</u> alone, one article of clothing
+      at a time.
         - A instead of B/A rather than b: 是A而不是B
 - off
     - adv. 离(开): 10% off, take off, turn off/on
